# vector-tile-renderer-rs

./: Cargo.toml  README.md  build.rs
shaders/: color.frag  color_lit.frag  color_lit.vert  skybox.frag  skybox.vert  texture_phong.frag  water.frag  water.vert
src/: camera.rs  graph.rs  line_strings.rs  main.rs  material.rs  mesh.rs  model.rs  player.rs  polygons.rs  primitives.rs  renderable.rs  scene_graph.rs  shader.rs  skybox.rs  state.rs  tile_address.rs  util.rs
src/protos/: mod.rs  vector_tile.rs
